// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal can be centered 1`] = `
<div
  class="vfm vfm--inset vfm--fixed"
  data-v-47686880=""
  style="z-index: 2000; display: none;"
>
  <transition-stub
    data-v-47686880=""
    name="none"
  >
    <div
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset"
      data-v-47686880=""
      style="display: none;"
    />
  </transition-stub>
   
  <transition-stub
    data-v-47686880=""
    enterclass="modal-zoom"
    entertoclass="modal-zoom-show"
    leaveclass="modal-zoom-show"
    leavetoclass="modal-zoom"
  >
    <div
      aria-expanded="false"
      aria-modal="true"
      class="vfm__container vfm--absolute vfm--inset vfm--outline-none allow-overflow"
      data-v-47686880=""
      role="dialog"
      style="display: none;"
      tabindex="-1"
    >
      <div
        class="vfm__content modal-dialog modal-dialog-centered"
        data-v-47686880=""
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <h5
              class="modal-title"
            >
              test modal header
            </h5>
             
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>
          </div>
           
          <div
            class="modal-body"
          >
            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </div>
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Modal can be large 1`] = `
<div
  class="vfm vfm--inset vfm--fixed"
  data-v-47686880=""
  style="z-index: 2000; display: none;"
>
  <transition-stub
    data-v-47686880=""
    name="none"
  >
    <div
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset"
      data-v-47686880=""
      style="display: none;"
    />
  </transition-stub>
   
  <transition-stub
    data-v-47686880=""
    enterclass="modal-zoom"
    entertoclass="modal-zoom-show"
    leaveclass="modal-zoom-show"
    leavetoclass="modal-zoom"
  >
    <div
      aria-expanded="false"
      aria-modal="true"
      class="vfm__container vfm--absolute vfm--inset vfm--outline-none allow-overflow"
      data-v-47686880=""
      role="dialog"
      style="display: none;"
      tabindex="-1"
    >
      <div
        class="vfm__content modal-dialog modal-lg"
        data-v-47686880=""
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <h5
              class="modal-title"
            >
              test modal header
            </h5>
             
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>
          </div>
           
          <div
            class="modal-body"
          >
            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </div>
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Modal can be small 1`] = `
<div
  class="vfm vfm--inset vfm--fixed"
  data-v-47686880=""
  style="z-index: 2000; display: none;"
>
  <transition-stub
    data-v-47686880=""
    name="none"
  >
    <div
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset"
      data-v-47686880=""
      style="display: none;"
    />
  </transition-stub>
   
  <transition-stub
    data-v-47686880=""
    enterclass="modal-zoom"
    entertoclass="modal-zoom-show"
    leaveclass="modal-zoom-show"
    leavetoclass="modal-zoom"
  >
    <div
      aria-expanded="false"
      aria-modal="true"
      class="vfm__container vfm--absolute vfm--inset vfm--outline-none allow-overflow"
      data-v-47686880=""
      role="dialog"
      style="display: none;"
      tabindex="-1"
    >
      <div
        class="vfm__content modal-dialog modal-sm"
        data-v-47686880=""
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <h5
              class="modal-title"
            >
              test modal header
            </h5>
             
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>
          </div>
           
          <div
            class="modal-body"
          >
            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </div>
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Modal should be closable by clicking the backdrop by default 1`] = `
<div
  class="vfm vfm--inset vfm--fixed"
  data-v-47686880=""
  style="z-index: 2000; display: none;"
>
  <transition-stub
    data-v-47686880=""
    name="none"
  >
    <div
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset"
      data-v-47686880=""
      style="display: none;"
    />
  </transition-stub>
   
  <transition-stub
    data-v-47686880=""
    enterclass="modal-zoom"
    entertoclass="modal-zoom-show"
    leaveclass="modal-zoom-show"
    leavetoclass="modal-zoom"
  >
    <div
      aria-expanded="false"
      aria-modal="true"
      class="vfm__container vfm--absolute vfm--inset vfm--outline-none allow-overflow"
      data-v-47686880=""
      role="dialog"
      style="display: none;"
      tabindex="-1"
    >
      <div
        class="vfm__content modal-dialog"
        data-v-47686880=""
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <h5
              class="modal-title"
            >
              test modal header
            </h5>
             
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>
          </div>
           
          <div
            class="modal-body"
          >
            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </div>
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Modal should be closable using the ok-text button 1`] = `
<div
  class="vfm vfm--inset vfm--fixed"
  data-v-47686880=""
  style="z-index: 2000; display: none;"
>
  <transition-stub
    data-v-47686880=""
    name="none"
  >
    <div
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset"
      data-v-47686880=""
      style="display: none;"
    />
  </transition-stub>
   
  <transition-stub
    data-v-47686880=""
    enterclass="modal-zoom"
    entertoclass="modal-zoom-show"
    leaveclass="modal-zoom-show"
    leavetoclass="modal-zoom"
  >
    <div
      aria-expanded="false"
      aria-modal="true"
      class="vfm__container vfm--absolute vfm--inset vfm--outline-none allow-overflow"
      data-v-47686880=""
      role="dialog"
      style="display: none;"
      tabindex="-1"
    >
      <div
        class="vfm__content modal-dialog"
        data-v-47686880=""
      >
        <div
          class="modal-content"
        >
          <!---->
           
          <div
            class="modal-body"
          >
            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </div>
           
          <div
            class="modal-footer"
          >
            <button
              class="btn btn-primary"
            >
              
        test OK button
      
            </button>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Modal should not be closable by clicking the backdrop if backdrop is set as false 1`] = `
<div
  class="vfm vfm--inset vfm--fixed"
  data-v-47686880=""
  style="z-index: 2000; display: none;"
>
  <transition-stub
    data-v-47686880=""
    name="none"
  >
    <div
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset"
      data-v-47686880=""
      style="display: none;"
    />
  </transition-stub>
   
  <transition-stub
    data-v-47686880=""
    enterclass="modal-zoom"
    entertoclass="modal-zoom-show"
    leaveclass="modal-zoom-show"
    leavetoclass="modal-zoom"
  >
    <div
      aria-expanded="false"
      aria-modal="true"
      class="vfm__container vfm--absolute vfm--inset vfm--outline-none allow-overflow"
      data-v-47686880=""
      role="dialog"
      style="display: none;"
      tabindex="-1"
    >
      <div
        class="vfm__content modal-dialog"
        data-v-47686880=""
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <h5
              class="modal-title"
            >
              test modal header
            </h5>
             
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>
          </div>
           
          <div
            class="modal-body"
          >
            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </div>
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Modal should not show footer when no footer is given 1`] = `
<div
  class="vfm vfm--inset vfm--fixed"
  data-v-47686880=""
  style="z-index: 2000; display: none;"
>
  <transition-stub
    data-v-47686880=""
    name="none"
  >
    <div
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset"
      data-v-47686880=""
      style="display: none;"
    />
  </transition-stub>
   
  <transition-stub
    data-v-47686880=""
    enterclass="modal-zoom"
    entertoclass="modal-zoom-show"
    leaveclass="modal-zoom-show"
    leavetoclass="modal-zoom"
  >
    <div
      aria-expanded="false"
      aria-modal="true"
      class="vfm__container vfm--absolute vfm--inset vfm--outline-none allow-overflow"
      data-v-47686880=""
      role="dialog"
      style="display: none;"
      tabindex="-1"
    >
      <div
        class="vfm__content modal-dialog"
        data-v-47686880=""
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <h5
              class="modal-title"
            >
              test modal header
            </h5>
             
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>
          </div>
           
          <div
            class="modal-body"
          >
            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </div>
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Modal should not show header when no header is given 1`] = `
<div
  class="vfm vfm--inset vfm--fixed"
  data-v-47686880=""
  style="z-index: 2000; display: none;"
>
  <transition-stub
    data-v-47686880=""
    name="none"
  >
    <div
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset"
      data-v-47686880=""
      style="display: none;"
    />
  </transition-stub>
   
  <transition-stub
    data-v-47686880=""
    enterclass="modal-zoom"
    entertoclass="modal-zoom-show"
    leaveclass="modal-zoom-show"
    leavetoclass="modal-zoom"
  >
    <div
      aria-expanded="false"
      aria-modal="true"
      class="vfm__container vfm--absolute vfm--inset vfm--outline-none allow-overflow"
      data-v-47686880=""
      role="dialog"
      style="display: none;"
      tabindex="-1"
    >
      <div
        class="vfm__content modal-dialog"
        data-v-47686880=""
      >
        <div
          class="modal-content"
        >
          <!---->
           
          <div
            class="modal-body"
          >
            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </div>
           
          <div
            class="modal-footer"
          >
            test modal footer
          </div>
        </div>
         
        <!---->
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Modal should show footer when both footer and ok-text are given 1`] = `
<div
  class="vfm vfm--inset vfm--fixed"
  data-v-47686880=""
  style="z-index: 2000; display: none;"
>
  <transition-stub
    data-v-47686880=""
    name="none"
  >
    <div
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset"
      data-v-47686880=""
      style="display: none;"
    />
  </transition-stub>
   
  <transition-stub
    data-v-47686880=""
    enterclass="modal-zoom"
    entertoclass="modal-zoom-show"
    leaveclass="modal-zoom-show"
    leavetoclass="modal-zoom"
  >
    <div
      aria-expanded="false"
      aria-modal="true"
      class="vfm__container vfm--absolute vfm--inset vfm--outline-none allow-overflow"
      data-v-47686880=""
      role="dialog"
      style="display: none;"
      tabindex="-1"
    >
      <div
        class="vfm__content modal-dialog"
        data-v-47686880=""
      >
        <div
          class="modal-content"
        >
          <!---->
           
          <div
            class="modal-body"
          >
            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </div>
           
          <div
            class="modal-footer"
          >
            test modal footer
          </div>
        </div>
         
        <!---->
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Modal supports fade effect 1`] = `
<div
  class="vfm vfm--inset vfm--fixed"
  data-v-47686880=""
  header="test modal header"
  style="z-index: 2000; display: none;"
>
  <transition-stub
    data-v-47686880=""
    name="none"
  >
    <div
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset"
      data-v-47686880=""
      style="display: none;"
    />
  </transition-stub>
   
  <transition-stub
    data-v-47686880=""
    name="vfm"
  >
    <div
      aria-expanded="false"
      aria-modal="true"
      class="vfm__container vfm--absolute vfm--inset vfm--outline-none allow-overflow"
      data-v-47686880=""
      role="dialog"
      style="display: none;"
      tabindex="-1"
    >
      <div
        class="vfm__content modal-dialog"
        data-v-47686880=""
      >
        <div
          class="modal-content"
        >
          <!---->
           
          <div
            class="modal-body"
          >
            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </div>
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </transition-stub>
</div>
`;
